# phenocam_finder

./: .gitignore  .pre-commit-config.yaml  README.md  all_sites.geojson  config.yaml  get_indices.py  get_scenes.py  index.html  main.py  phenocam.py  pyproject.toml  requirements.txt  results.json  run_all.py  selected_sites.geojson  selected_sites.json  site_evaluation_results.geojson
src/phenocam_finder/: __init__.py  config.py  core.py  phenocam_query.py  satellite_query.py  spatial_utils.py
tests/: conftest.py  test_data_finder.py  test_gap_calculation.py  test_gap_debug.py  test_integration.py  test_queries.py  test_spatial_utils.py
